<resources>
    <string name="app_name">Marvel App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="personagens">Personagens</string>
    <string name="castGroup">Android Treinamento - Android</string>
    <string name="eventos">Eventos</string>
    <string name="menu_clicado">MenuClicado</string>

    <string name="title_share">Compartilhar</string>
    <string name="img01">img01</string>
    <string name="img02">img02</string>
    <string name="img03">img03</string>
    <string name="img04">img04</string>
    <string name="skip">Skip</string>
    <string name="maps">Mapas</string>
    <string name="MAPS_API">AIzaSyD3P0Uf30OH-9_Wd1u5Xn7Hlv3WxnUQZMk</string>
    <string name="msg_error_generic">Erro Generico ao recuperar os dados.</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="favorite">Favorite</string>
    <string name="visited_splash">visitouSplash</string>
    <string name="scan">Scan</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="button_connect">Connect</string>
    <string name="selecionar_todos">Select All</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="camera">Camera</string>

</resources>
