<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_personagens"
            android:icon="@drawable/ic_marvel"
            android:title="@string/personagens" />

        <item
            android:id="@+id/nav_evento"
            android:title="@string/eventos" />

        <item
            android:id="@+id/nav_mapa"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/maps" />

        <item
            android:id="@+id/nav_blue"
            android:icon="@drawable/ic_bluetooth"
            android:title="@string/bluetooth" />

    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/camera" />

    </group>

</menu>
